# swagger.yaml
@@ -384,7 +384,71 @@ paths:
         '404':
           $ref: '#/components/responses/404'
         '500':
-          $ref: '#/components/responses/500'        
+          $ref: '#/components/responses/500'   
+  '/enrollments?query=params':
+    get:
+      security: 
+        - bearerAuth: []
+      description: List of all batch 
+      tags: [User]
+      parameters: 
+        - $ref: '#/components/parameters/pageParams'
+        - $ref: '#/components/parameters/limitParams'
+        - $ref: '#/components/parameters/sortTypeParams'
+        - $ref: '#/components/parameters/sortByParams'
+        - $ref: '#/components/parameters/searchParams'
+        
+      responses: 
+        '200':
+          description: All Enrolled Student List
+          content: 
+            'application/json':
+              schema: 
+                type: object
+                properties: 
+                  code: 
+                    type: number
+                    format: int32
+                    example: 200
+                  message:
+                    type: string
+                    example: success
+                  Enrolled:
+                    type: array
+                    items: 
+                      allOf: 
+                        - type: object
+                          properties:
+                            studentID:
+                              type: number
+                              format: int32
+                              example: 1
+                            batchID:
+                              type: number
+                              format: int32
+                              example: 1
+                            enrollAt:
+                              type: string
+                              format: date-time
+                              example: '2026-02-06T14:02:04.614Z'
+                            status:
+                              type: string
+                              enum: [Pending, completed, canceled]
+                              example: Pending 
+                            link:
+                              type: string
+                              format: url
+                              example: /students/12
+                  pagination:
+                    $ref: '#/components/schemas/pagination'
+                  links:
+                    $ref: '#/components/schemas/links'
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+        '500':
+          $ref: '#/components/responses/500'     
   '/teacher/profile':
     post:
       security:
@@ -2372,70 +2436,7 @@ paths:
           $ref: '#/components/responses/401'
         '500':
           $ref: '#/components/responses/500'
-  '/enrollments?query=params':
-    get:
-      security: 
-        - bearerAuth: []
-      description: List of all batch 
-      tags: [Enrollment]
-      parameters: 
-        - $ref: '#/components/parameters/pageParams'
-        - $ref: '#/components/parameters/limitParams'
-        - $ref: '#/components/parameters/sortTypeParams'
-        - $ref: '#/components/parameters/sortByParams'
-        - $ref: '#/components/parameters/searchParams'
-        
-      responses: 
-        '200':
-          description: All Enrolled Student List
-          content: 
-            'application/json':
-              schema: 
-                type: object
-                properties: 
-                  code: 
-                    type: number
-                    format: int32
-                    example: 200
-                  message:
-                    type: string
-                    example: success
-                  Enrolled:
-                    type: array
-                    items: 
-                      allOf: 
-                        - type: object
-                          properties:
-                            studentID:
-                              type: number
-                              format: int32
-                              example: 1
-                            batchID:
-                              type: number
-                              format: int32
-                              example: 1
-                            enrollAt:
-                              type: string
-                              format: date-time
-                              example: '2026-02-06T14:02:04.614Z'
-                            status:
-                              type: string
-                              enum: [Pending, completed, canceled]
-                              example: Pending 
-                            link:
-                              type: string
-                              format: url
-                              example: /students/12
-                  pagination:
-                    $ref: '#/components/schemas/pagination'
-                  links:
-                    $ref: '#/components/schemas/links'
-        '400':
-          $ref: '#/components/responses/400'
-        '401':
-          $ref: '#/components/responses/401'
-        '500':
-          $ref: '#/components/responses/500'
+  
 
   '/notification':
     post:
